@@ -679,6 +679,10 @@ fieldset.register_informations{\n
   background-color: <dtml-var document_background_color>;\n
   font-weight: bold;\n
 }\n
+\n
+.content .figure {\n
+  text-align: right;\n
+}\n
 
 
 ]]></string> </value>
