@@ -64,6 +64,7 @@
                     <key> <string>Access contents information</string> </key>
                     <value>
                       <tuple>
+                        <string>Assignee</string>
                         <string>Assignor</string>
                         <string>Auditor</string>
                         <string>Manager</string>
@@ -102,6 +103,7 @@
                     <key> <string>View</string> </key>
                     <value>
                       <tuple>
+                        <string>Assignee</string>
                         <string>Assignor</string>
                         <string>Auditor</string>
                         <string>Manager</string>
